<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard"
    >

    <TextView
        android:id="@+id/donateFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_food_dont_waste_it"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/donateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donate"
        android:textSize="20sp"
        android:layout_below="@id/donateFood"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="donateOrSell"/>

    <TextView
        android:id="@+id/lookForFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/look_for_food"
        android:layout_below="@id/donateButton"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/lookForFoodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grab_it"
        android:textSize="20sp"
        android:layout_below="@id/lookForFood"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="lookForFood"/>

</RelativeLayout>