<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:layout_marginTop="40dp"
        android:padding="40dp"
        android:textSize="20sp"
        android:textStyle="italic"/>



    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:layout_alignEnd="@id/passwordTextView"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/intro"
        />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/emailTextView"
        android:layout_alignBaseline="@id/emailTextView"
        />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@id/emailTextView"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/passwordTextView"
        android:layout_alignBaseline="@id/passwordTextView"
        android:inputType="textPassword"
        android:layout_below="@id/emailEditText"
        />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/login"
        android:layout_below="@id/passwordTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="goToDashboard"
        />




</RelativeLayout>